# gladius-mod-tool

./: .gitignore  CMakeLists.txt  README.md
cmake/: bundle_python_stdlib.cmake  copy_mingw_deps.cmake
resources/: gladiushashes.json  schoolbuilder_vanilla.json  scripts.qrc
resources/scripts/: Gladius_Units_IDX_Repack.py  Gladius_Units_IDX_Unpack.py  Tok_Num_Update.py  Update_Strings_Bin.py  bec-tool-all.py  gladiushashes.py  ngciso-tool.py  tok-tool.py
src/: EditorTab.cpp  EditorTab.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  NativeRunner.cpp  NativeRunner.h  PipelineTab.cpp  PipelineTab.h  Ps2IsoRunner.cpp  Ps2IsoRunner.h  PythonRunner.cpp  PythonRunner.h  SchoolBuilderTab.cpp  SchoolBuilderTab.h  ScriptExtractor.cpp  ScriptExtractor.h  XisoRunner.cpp  XisoRunner.h  main.cpp
src/tools/: BecTool.cpp  BecTool.h  GladiusHashes.cpp  GladiusHashes.h  GladiusIdxRepack.cpp  GladiusIdxRepack.h  GladiusIdxUnpack.cpp  GladiusIdxUnpack.h  NgcIsoTool.cpp  NgcIsoTool.h  TokNumUpdate.cpp  TokNumUpdate.h  TokTool.cpp  TokTool.h  ToolTypes.h  UpdateStringsBin.cpp  UpdateStringsBin.h
